# drama-tool

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  drama.c  dt.cpp  gldef.c.in  gldef.h  shaderprogram.c  shaderprogram.h  xwindow.c  xwindow.h
gfx/: mainwin.frag
